# fsl-bisindo

./: .env.example  .gitignore  README.md  evaluate.sh  pyproject.toml
.github/instructions/: context7.instructions.md
config/: autsl_decoupled_gcn.yaml
configs/backbones/: autsl_slgcn.yaml  csl_slgcn.yaml  lsa64_slgcn.yaml  random_slgcn.yaml
configs/data/: wlbisindo_keypoints.yaml
configs/fewshot/: train_protonet.yaml
configs/splits/: wlbisindo_16_6_10_dispersion_autsl.yaml
notebooks/: feature_extraction.ipynb  initial_exp.ipynb  protonet.ipynb  result_visualization.ipynb
presentation/: package.json  pnpm-lock.yaml  slides.md
src/fsl_bisindo/data/: __init__.py  wlbisindo_dataset.py
src/fsl_bisindo/engine/: extractor.py
src/fsl_bisindo/models/: __init__.py  load_pretrained.py  protonet.py  protonet_head.py
src/fsl_bisindo/utils/: wandb_utils.py
tools/: download_bisindo.py  download_release_keypoints.py  download_weights.py  extract_features.py  extract_keypoints.py  run_encoder_comparison.py  train_fewshot.py
